--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.3.0",
     "firebase": "^11.0.2",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "react-to-print": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
